Improve build files and launch fallbacks